--- a/GL_Game/GL_Game.vcxproj
+++ b/GL_Game/GL_Game.vcxproj
@@ -22,13 +22,18 @@
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Events\InputEvent.cpp" />
     <ClCompile Include="src\GL\glad.c" />
-    <ClCompile Include="src\GL\Shaders\ShaderHandler.cpp" />
-    <ClCompile Include="src\GL\Window.cpp" />
+    <ClCompile Include="src\GL\Render\Shader.cpp" />
+    <ClCompile Include="src\GL\Window\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Events\InputEvent.h" />
-    <ClInclude Include="src\GL\Shaders\ShaderHandler.h" />
+    <ClInclude Include="src\GL\Render\Shader.h" />
+    <ClInclude Include="src\GL\Window\Window.h" />
     <ClInclude Include="src\GL\Window.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\GL\Render\Shaders\Test_Fragment.frag" />
+    <None Include="src\GL\Render\Shaders\Test_Vertex.vert" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
