Diffuse Lightning system added
* Created a class to handle the "Light Emitter" type of Entities

* The Voxel (Main Entity) is not accepting by now the texture... Because this will be added again by some another of system of rendering (a.k.a Material)

--- a/GL_Game/GL_Game.vcxproj.filters
+++ b/GL_Game/GL_Game.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\Camera\Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Entities\Debug\Lamp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Events\InputEvent.h">
@@ -77,9 +80,16 @@
     <ClInclude Include="src\Camera\Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Entities\Debug\Lamp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\GL\Render\Shaders\Test_Fragment.frag" />
     <None Include="src\GL\Render\Shaders\Test_Vertex.vert" />
+    <None Include="src\GL\Render\Shaders\Lamp_Vertex.vert" />
+    <None Include="src\GL\Render\Shaders\Lamp_Fragment.frag" />
+    <None Include="src\GL\Render\Shaders\Debug_Fragment.frag" />
+    <None Include="src\GL\Render\Shaders\Debug_Vertex.vert" />
   </ItemGroup>
 </Project>
