--- a/GL_Game/GL_Game.vcxproj
+++ b/GL_Game/GL_Game.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Entities\Debug\Lamp.cpp" />
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Camera\Camera.cpp" />
     <ClCompile Include="src\Entities\Entity.cpp" />
@@ -31,6 +32,7 @@
     <ClCompile Include="src\Textures\Texture2D.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Entities\Debug\Lamp.h" />
     <ClInclude Include="src\Camera\Camera.h" />
     <ClInclude Include="src\Entities\Entity.h" />
     <ClInclude Include="src\Events\InputEvent.h" />
@@ -43,6 +45,10 @@
     <ClInclude Include="src\Tools\StringExtension.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="src\GL\Render\Shaders\Debug_Fragment.frag" />
+    <None Include="src\GL\Render\Shaders\Debug_Vertex.vert" />
+    <None Include="src\GL\Render\Shaders\Lamp_Fragment.frag" />
+    <None Include="src\GL\Render\Shaders\Lamp_Vertex.vert" />
     <None Include="src\GL\Render\Shaders\Test_Fragment.frag" />
     <None Include="src\GL\Render\Shaders\Test_Vertex.vert" />
   </ItemGroup>
@@ -122,6 +128,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
